fixing sonar cloud bugs